- New attribute "mapImage" in NXSL class "NetObj"
- New NXSL class "Container"
- Container autobind mode and script can be set from NXSL
- Fixed bug in NXSL string concatenation
- Events generated when interface expected state changed
- Situations functionality is replaced with persistent storage that is included in each execution environment
- Compression support in communication protocol
- Management console:
	- Mutiple files can be scheduled for upload to agent at once
	- DCIs created from templates made visually distinguishable in data collection editor
	- "Inverted" flag ignored in event processing policy if event or object list is empty
- Fixed issues: NX-60, NX-630, NX-916, NX-1123, NX-1151, NX-1161, NX-1165, NX-1171, NX-1174, NX-1178, NX-1188


*
* 2.1-M2
*

- Added alarm category functionality to manage which alarms are seen by what users
	- EPP rules can be configured to generate categorised alarms
	- Alarm categories can be created and configured in Alarm Category Configurator
	- By default view_all_alarms acl added to Everyone group
- Server can be configured to periodically send alarm summary emails
- Added template graphs
- New NXSL functions: mktime, GetSyslogRuleCheckCount, GetSyslogRuleMatchCount
- New NXSL "Node" class attributes: isInMaintenanceMode, lastAgentCommTime
- New NXSL "Table" class attribute "rows"
- Access to object's alarms in NXSL via "alarms" attribute in "NetObj" class
- Operator "new" in NXSL which can be used to instantiate objects if object class supports it
- Template auto-apply and container auto-bind works for clusters
- H3C driver correctly reads IPv6 addresses on interfaces
- Improved HP ProCurve driver
- SMS driver for Nexmo service
- SMS driver for SMSEagle gateway
- SMS driver for MyMobile service
- Fixed FDB handling on Cisco switches
- Added support for CHAP, MS-CHAPv1, and MS-CHAPv2 in RADIUS authentication
- MySQL monitoring subagent
- Fixed FreeBSD 11 compatibility issues